@@ -1,21 +1,24 @@
-96dcb1cde9bc98c736fb33146982215f4509ae8539475e513e9cef326c78cbda  test/results/test00-knight-posix-binary
+9386b893f5d31a130103618131b4bf89c40d8c8aa99d216bd30cc7dc62deeb47  test/results/test00-knight-posix-binary
 c52562bd0aabb86ce8ca177f22f8d0455769b444df2d4d62894faab63b7151d8  test/results/test00-x86-binary
-fab674644b9519e8ec39e254e6b13fe5eccb9f861f7d9e7d2f736d40875b7546  test/results/test01-knight-posix-binary
+97d784284844e01d28beb37c0d04a97b3f1b2835c7b7e0b169e1a6e78d6c6c9a  test/results/test01-knight-posix-binary
 eae96857f2b6d8e8ba86ac06e72345ea572622b358b23978bb5f2db1baadf41c  test/results/test01-x86-binary
-d1788ab10ad9d16488eac547664f59b1a0d4684da90240eecc1de3dceac7de78  test/results/test02-knight-posix-binary
+0add4a5a2e1a2a1e3806f72523f682364c7c65f5c1efbdf1f11af916b6afc5a0  test/results/test02-knight-posix-binary
 8ead336d2f3f72d5874230492e0472edec61d355905e8636e3dfb2731695037c  test/results/test02-x86-binary
-e7e27666bbac654863302365ace7696b220bbb4f989eb3ee76966e09076d5fdd  test/results/test03-knight-posix-binary
+d29f0a2580efa4c47b47a7ff24d5295920ac0d410cd9480639072b6635c585e9  test/results/test03-knight-posix-binary
 2313cb3f1a2b9eb6bf15f8d43418e15d6c16f7f1b5c22700fdfc2b38beb59192  test/results/test03-x86-binary
-f46d7e681d9022be3e2df0063826302b708f35f682942f16fb247e22dee70137  test/results/test04-knight-posix-binary
+2831709595712268889e1737ec7728cf29385567b736a3dcc35fb7b97773b79f  test/results/test04-knight-posix-binary
 b7ddb37063c541c6a315809c4438aa235d6702f54bb64f4ffc88dbe78617de81  test/results/test04-x86-binary
-5efe707d92f6bea63be31605f38ac9caff6509b10f4461c3df9e34332dc550f7  test/results/test05-knight-posix-binary
+78921a43d41d6c62cab2552d3f13f353a9fd5beee5be702417e47a15d95e169d  test/results/test05-knight-posix-binary
 b5b76320ccda887a30b0bbefc2a5c302c8f2aa3c398d92ef3a79526690b25d6f  test/results/test05-x86-binary
-663fc6eefe965f237b6bf5a211398c8ae1210f97ff39b59603677e92462c68c7  test/results/test06-binary
-a9a3e332d13ded5f80d7431f8717f26527b3722b33ea57760a9a5723dffc099c  test/results/test07-binary
-f1c01feb865c4d552033186d9ce50dd39468a7e8aebf762886c13ad3e03b5011  test/results/test08-binary
+3f415979cca69519a8298535380ec707f9cbdc2f2635df1e3abc8bc492b6203d  test/results/test06-knight-posix-binary
+663fc6eefe965f237b6bf5a211398c8ae1210f97ff39b59603677e92462c68c7  test/results/test06-x86-binary
+3befa4e52965fb52186379c36fc6f6d897902dd4427e7f6ba2cc4e99cc969c49  test/results/test07-knight-posix-binary
+a9a3e332d13ded5f80d7431f8717f26527b3722b33ea57760a9a5723dffc099c  test/results/test07-x86-binary
+08bc1fb86c1df73b21e0b68e76572a33477f8943abdd16433d00ef231195bd22  test/results/test08-knight-posix-binary
+f1c01feb865c4d552033186d9ce50dd39468a7e8aebf762886c13ad3e03b5011  test/results/test08-x86-binary
 3b39e72f3de90ed690adfaf6145af46157cef2ec5e72867ac577fa27a0229894  test/results/test09-binary
 020e86020819cc4963e6185b22e534fcf8306b6cb116f12643f254a24688ff0a  test/results/test10-binary
-70429b4c78f8a712c5bf2de9d7cbfac06fafedc0635b58f0b6319906f3549ab0  test/results/test100-binary
+9a0edc49d1078ffc7ed2578e50198e9e7695c2f26151a3d6e76bab7f2db6872c  test/results/test100-binary
 3fd11bad4a426ce1ff8fd9c6d7d2b943effae9f3f5740b7376e426e9b0555851  test/results/test11-binary
 f98ab8e4bb35580e0dde96126d7a56aff66bda208d02c8d89390b40d6cff591c  test/results/test12-binary
 5051ffca2615144419f8ec1a5d4999486ae81e7781428f59e47e866af97cef92  test/results/test13-binary
