@@ -17,29 +17,27 @@
 
 set -ex
 # Build the test
-bin/M2-Planet --architecture x86 -f test/common_x86/functions/malloc.c \
-	-f functions/calloc.c \
-	-f test/common_x86/functions/putchar.c \
-	-f test/test17/memset.c \
-	-o test/test17/memset.M1 || exit 1
+bin/M2-Planet --architecture knight-posix -f test/common_knight/functions/putchar.c \
+	-f test/test06/for.c \
+	-o test/test06/for.M1 || exit 1
 
 # Macro assemble with libc written in M1-Macro
-M1 -f test/common_x86/x86_defs.M1 \
-	-f test/common_x86/libc-core.M1 \
-	-f test/test17/memset.M1 \
-	--LittleEndian \
-	--architecture x86 \
-	-o test/test17/memset.hex2 || exit 2
+M1 -f test/common_knight/knight_defs.M1 \
+	-f test/common_knight/libc-core.M1 \
+	-f test/test06/for.M1 \
+	--BigEndian \
+	--architecture knight-posix \
+	-o test/test06/for.hex2 || exit 2
 
 # Resolve all linkages
-hex2 -f test/common_x86/ELF-i386.hex2 -f test/test17/memset.hex2 --LittleEndian --architecture x86 --BaseAddress 0x8048000 -o test/results/test17-binary --exec_enable || exit 3
+hex2 -f test/common_knight/ELF-knight.hex2 -f test/test06/for.hex2 --BigEndian --architecture knight-posix --BaseAddress 0x00 -o test/results/test06-knight-posix-binary --exec_enable || exit 3
 
 # Ensure binary works if host machine supports test
-if [ "$(get_machine ${GET_MACHINE_FLAGS})" = "x86" ]
+if [ "$(get_machine ${GET_MACHINE_FLAGS})" = "knight" ]
 then
 	# Verify that the resulting file works
-	./test/results/test17-binary >| test/test17/proof || exit 4
-	out=$(sha256sum -c test/test17/proof.answer)
-	[ "$out" = "test/test17/proof: OK" ] || exit 5
+	./test/results/test06-knight-posix-binary >| test/test06/proof || exit 4
+	out=$(sha256sum -c test/test06/proof.answer)
+	[ "$out" = "test/test06/proof: OK" ] || exit 5
 fi
 exit 0
