@@ -17,28 +17,28 @@
 
 set -x
 # Build the test
-bin/M2-Planet --architecture x86 -f test/common_x86/functions/putchar.c \
-	-f test/common_x86/functions/exit.c \
-	-f functions/malloc.c \
+bin/M2-Planet --architecture knight-posix -f test/common_knight/functions/putchar.c \
+	-f test/common_knight/functions/exit.c \
+	-f test/common_knight/functions/malloc.c \
 	-f test/test08/struct.c \
 	-o test/test08/struct.M1 || exit 1
 
 # Macro assemble with libc written in M1-Macro
-M1 -f test/common_x86/x86_defs.M1 \
-	-f test/common_x86/libc-core.M1 \
+M1 -f test/common_knight/knight_defs.M1 \
+	-f test/common_knight/libc-core.M1 \
 	-f test/test08/struct.M1 \
-	--LittleEndian \
-	--architecture x86 \
+	--BigEndian \
+	--architecture knight-posix \
 	-o test/test08/struct.hex2 || exit 2
 
 # Resolve all linkages
-hex2 -f test/common_x86/ELF-i386.hex2 -f test/test08/struct.hex2 --LittleEndian --architecture x86 --BaseAddress 0x8048000 -o test/results/test08-binary --exec_enable || exit 3
+hex2 -f test/common_knight/ELF-knight.hex2 -f test/test08/struct.hex2 --BigEndian --architecture knight-posix --BaseAddress 0x00 -o test/results/test08-knight-posix-binary --exec_enable || exit 3
 
 # Ensure binary works if host machine supports test
-if [ "$(get_machine ${GET_MACHINE_FLAGS})" = "x86" ]
+if [ "$(get_machine ${GET_MACHINE_FLAGS})" = "knight*" ]
 then
 	# Verify that the compiled program returns the correct result
-	out=$(./test/results/test08-binary 2>&1 )
+	out=$(./test/results/test08-knight-posix-binary 2>&1 )
 	[ 16 = $? ] || exit 4
 	[ "$out" = "35419896642975313541989657891634" ] || exit 5
 fi
