@@ -15,30 +15,31 @@
 ## You should have received a copy of the GNU General Public License
 ## along with M2-Planet.  If not, see <http://www.gnu.org/licenses/>.
 
-set -ex
+set -x
 # Build the test
 bin/M2-Planet --architecture x86 -f test/common_x86/functions/putchar.c \
 	-f test/common_x86/functions/exit.c \
-	-f test/test07/do.c \
-	-o test/test07/do.M1 || exit 1
+	-f test/common_x86/functions/malloc.c \
+	-f test/test08/struct.c \
+	-o test/test08/struct.M1 || exit 1
 
 # Macro assemble with libc written in M1-Macro
 M1 -f test/common_x86/x86_defs.M1 \
 	-f test/common_x86/libc-core.M1 \
-	-f test/test07/do.M1 \
+	-f test/test08/struct.M1 \
 	--LittleEndian \
 	--architecture x86 \
-	-o test/test07/do.hex2 || exit 2
+	-o test/test08/struct.hex2 || exit 2
 
 # Resolve all linkages
-hex2 -f test/common_x86/ELF-i386.hex2 -f test/test07/do.hex2 --LittleEndian --architecture x86 --BaseAddress 0x8048000 -o test/results/test07-binary --exec_enable || exit 3
+hex2 -f test/common_x86/ELF-i386.hex2 -f test/test08/struct.hex2 --LittleEndian --architecture x86 --BaseAddress 0x8048000 -o test/results/test08-x86-binary --exec_enable || exit 3
 
 # Ensure binary works if host machine supports test
 if [ "$(get_machine ${GET_MACHINE_FLAGS})" = "x86" ]
 then
-	# Verify that the resulting file works
-	./test/results/test07-binary >| test/test07/proof || exit 4
-	out=$(sha256sum -c test/test07/proof.answer)
-	[ "$out" = "test/test07/proof: OK" ] || exit 5
+	# Verify that the compiled program returns the correct result
+	out=$(./test/results/test08-x86-binary 2>&1 )
+	[ 16 = $? ] || exit 4
+	[ "$out" = "35419896642975313541989657891634" ] || exit 5
 fi
 exit 0
