@@ -20,7 +20,7 @@ set -x
 ./bin/M2-Planet --architecture x86 -f test/common_x86/functions/exit.c \
 	-f functions/file.c \
 	-f functions/file_print.c \
-	-f functions/malloc.c \
+	-f test/common_x86/functions/malloc.c \
 	-f functions/calloc.c \
 	-f functions/match.c \
 	-f functions/in_set.c \
